z-index fix

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,7 +13,7 @@ body
 
 header
   position: relative
-  z-index: -2
+  //z-index: -2
 
   .extra-element
     position: absolute
